# neural-whoop

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
assets/courses/: big-loop.yaml  big-sprint.yaml  giant-circuit.yaml  spread-a.yaml  spread-b.yaml
assets/courses/_web/: circle.yaml
configs/: acro_flip.yaml  acro_flip_pitch.yaml  command_follow.yaml  gate_race.yaml  gate_race_air65.yaml  gate_race_air65_dstanh.yaml  gate_race_air65_hybrid.yaml  gate_race_air65_hybrid_mrel.yaml  gate_race_air65_hybrid_mrel_s1.yaml  gate_race_air65_hybrid_mrel_s2.yaml  gate_race_air65_muon100.yaml  gate_race_air65_muon25.yaml  gate_race_air65_muon25_cp30.yaml  gate_race_air65_muon25_rel.yaml  gate_race_air65_puff.yaml  gate_race_drcurric.yaml  gate_race_general.yaml  gate_race_general_air65.yaml  gate_race_general_curric.yaml  gate_race_general_giant.yaml  gate_race_general_giant_w256.yaml  gate_race_general_giant_w256_bigwt.yaml  gate_race_general_giant_w256_wt07.yaml  gate_race_general_giant_w384.yaml  gate_race_latency.yaml  gate_race_relreward.yaml  gate_race_simp2.yaml  gate_race_simp4.yaml  gate_race_spread.yaml  gesture_follow.yaml  hand_follow_clean.yaml  hand_follow_det.yaml  hand_follow_det_s30.yaml  hand_follow_det_s45.yaml  hand_follow_ema.yaml  hand_follow_ema_s30.yaml  hand_follow_ema_s45.yaml  hover.yaml  hover_air65_bridge.yaml  hover_blind_air65.yaml  (+97 more)
docs/: COMPARISON_PUFFERLIB.md  CONTRACT.md  FLYWHEEL.md  ONBOARD_COMPUTE.md  ROADMAP.md  SIM2REAL.md  STUDIO.md  TASK_CATALOG.md  VISUAL_CONTRACT.md
firmware/xiao_bridge/: README.md  platformio.ini
firmware/xiao_bridge/include/: wifi_config.h.example
firmware/xiao_bridge/src/: blink_test.cpp  main.cpp  uart_probe.cpp
scripts/: bench.py  chassis_fbx_to_glb.py  chassis_to_glb.py  env_check.py  eval.py  eval_scales.py  exit_probe.py  export_c.py  export_json.py  flight_report.py  hero_takeoff_flip_land.py  pilot.py  seed_courses.py  serve.py  sim_vs_real.py  survival_probe.py  train.py  viz.py
src/neural_whoop/: __init__.py  contract.py  course.py  experiment.py  oracle.py  randomization.py  reward.py  target.py
src/neural_whoop/analysis/: __init__.py  flight_log.py
src/neural_whoop/bench/: __init__.py  msp.py
src/neural_whoop/dynamics/: __init__.py  whoop.py
src/neural_whoop/envs/: __init__.py  base.py  registry.py
src/neural_whoop/eval/: __init__.py  pack.py  rollout.py
src/neural_whoop/perception/: __init__.py  estimator.py
src/neural_whoop/pilot/: __init__.py  config.py  controller.py  policy.py  telemetry.py
src/neural_whoop/policies/: __init__.py  tiny_cnn.py  tiny_policy.py
src/neural_whoop/studio/: __init__.py  course_validate.py  courses.py  flight.py  flight_report.py  live.py  rollout.py  server.py  tbscalars.py
src/neural_whoop/tasks/: __init__.py  acro_flip.py  command_follow.py  gate_race.py  gesture_follow.py  hand_follow.py  hover.py  hover_blind.py  hover_blind_v2.py  hover_tof.py  swarm_formation.py  swarm_race.py  target_follow.py
src/neural_whoop/training/: __init__.py  export.py  muon.py  ppo.py
src/neural_whoop/viz/: __init__.py  render.py  replay.py
tests/: test_acro_flip.py  test_append_prev_action.py  test_boundary_penalty.py  test_contract.py  test_course.py  test_course_validate.py  test_dr_amp_range.py  test_dr_ar_noise.py  test_dr_channels.py  test_dr_curriculum.py  test_dr_latency_jitter.py  test_env_smoke.py  test_flight_controller.py  test_flight_log.py  test_flight_ws.py  test_hover.py  test_hover_blind.py  test_hover_blind_v2.py  test_hover_h2_reward.py  test_hover_tof.py  test_live.py  test_msp.py  test_obs_stack.py  test_oracle.py  test_pilot_acro_obs.py  test_pilot_tof.py  test_pilot_vz_damper.py  test_policy_export.py  test_render.py  test_replay.py  test_reward_perception.py  test_studio.py  test_swarm_race.py  test_target_follow.py  test_target_ppo.py  test_uplink_latency.py
web/studio/: api.js  bench.js  cameras.js  drone-model.js  editor.js  environment.js  geometry.js  index.html  layout.js  live.js  main.js  playback.js  run-loader.js  scene.js
web/studio/assets/: whoop_chassis.glb
