[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-whoop"
version = "0.1.0"
description = "GPU-parallel, swarm-capable whoop RL lab on DiffAero, developed autonomously on Flywheel."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "BSD-3-Clause" }
authors = [{ name = "neural-whoop" }]
keywords = ["drone", "quadrotor", "reinforcement-learning", "diffaero", "sim2real", "swarm", "gpu"]

# Core runtime. torch MUST come from the cu128 index for sm_120 (Blackwell / RTX 5090)
# kernels — see [tool.uv.sources] below and scripts/env_check.py.
dependencies = [
    "torch>=2.7",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "tensorboard>=2.18",
    "omegaconf>=2.3",   # DiffAero dynamics config objects (DictConfig); pure-python, light
]

[project.optional-dependencies]
# Policy export to ONNX (TorchScript ships with torch).
export = [
    "onnx>=1.16",
    "onnxruntime>=1.18",
    "onnxscript>=0.1",  # required by torch's ONNX exporter on recent torch versions
]
# Visual observability: replay rendering (trajectory/FPV/curves/comparison). The replay
# schema + recorder are core (json+gzip+numpy); only the renderer needs these. imageio
# (optional GIF stitch) pulls an ffmpeg binary via imageio-ffmpeg.
viz = [
    "matplotlib>=3.8",
    "pillow>=10.0",
    "tbparse>=0.0.8",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
]
# Interactive browser Studio backend (FastAPI + uvicorn). The static Three.js frontend under
# web/studio/ loads three.js from a CDN, so no Node toolchain lives in this repo.
studio = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pyyaml>=6.0",
]
# Stage-0 bench tooling (scripts/bench.py): USB serial to the real flight controller.
# The MSP codec itself is pure stdlib; only the live client needs pyserial.
bench = [
    "pyserial>=3.5",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "httpx>=0.27",   # FastAPI TestClient (studio API tests)
]

[tool.setuptools.packages.find]
where = ["src"]

# --- torch from the CUDA 12.8 wheel index (sm_120 / Blackwell kernels) -------------------
# The default PyPI wheels lack sm_120 kernels and throw "no kernel image available" on the
# 5090. This is the #1 install gotcha; pinning the index here makes it reproducible.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = ["E741"]  # diffaero math uses l/I-like names; keep ports faithful
